--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ContactBook
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\owner\\OneDrive\\Documents\\Sorce Codes\\Libraries\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=C:\\Users\\owner\\OneDrive\\Documents\\Sorce Codes\\Libraries\\mysql-connector-java-5.1.47\\mysql-connector-java-5.1.47-bin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.47-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
